# rusty_http

./: Cargo.toml  README.md
src/: lib.rs  main.rs  routing.rs
templates/: 404.html  index.html
