[package]
name = "rusty_http"
version = "0.1.0"
authors = ["Salah Sheikh <salahsheikh@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["std", "serde"] }
simple_logger = { version = "1.6.0" }
num_cpus = { version = "*" }
handlebars = { version = "3.0.1" }
lazy_static = { version = "*" }
serde = "*"
serde_json = "1.0"